CHATS_SIT/force-app/main/default/objects/T_INDIV_DISQLN__c.object
<CustomObject>
    <fields>
        <fullName>CDE_DECN_IPV__c</fullName>
        <label>CDE_DECN_IPV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00668</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_ASSIGN__c</fullName>
        <label>CDE_TYPE_ASSIGN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_BEGIN_EFFV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPEAL__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IDN_APPEAL</label>
        <referenceTo>T_APPEAL__c</referenceTo>
        <relationshipLabel>T_INDIV_DISQLN</relationshipLabel>
        <relationshipName>T_INDIV_DISQLN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TXT_REASON_IPV_ALLEGED__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>TXT_REASON_IPV_ALLEGED</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
     <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>T_INDIV_DISQLN</relationshipLabel>
        <relationshipName>T_INDIV_DISQLN</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>T_INDIV_DISQLN</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T_INDIV_DISQLN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>